# stockfetch

./: Cargo.toml  README.md  flake.nix
src/: company_info.rs  main.rs  news.rs
