[package]
name = "stockfetch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
rust_decimal = { version = "1.36.0", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
